try to avoid button overlap

--- a/_sass/4-layouts/_page-home.scss
+++ b/_sass/4-layouts/_page-home.scss
@@ -46,7 +46,7 @@
 /* Position the toggle button in the top-right corner */
 #toggle-container {
   position: fixed;
-  top: 20px;
+  top: 10px;
   right: 20px;
   z-index: 1000;
 }
